# pretrain-experiments

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md  pyproject.toml
config/: benchmark-contamination.yaml  example-config.yaml  olmes-evaluation.yaml  olmes.yaml  olmo-3.yaml  olmo2_evaluations.yaml
config/train-once-answer-all/: toaa-evaluations.yaml
docs/: insertions.md
examples/: token_insertion_demo.ipynb
internal/: cluster.md  control-cluster.ipynb  mlcloud.py  sebastian.ipynb  sebastian.md
internal/ferranti/: pretrain_experiment_4xH100.sh  some_custom_1xH100_job.sh
internal/galvani/: pretrain_experiment_1xA100.sh  pretrain_experiment_4xA100.sh
pretrain-experiments/: DynamicHDF5Storage.py  IntervalSet.py  checkpoint.py  experiments.py  framework.py  insertion.py  pretrain-experiments.py  pretrain_experiment.py  script_utils.py  trainer.py
pretrain-experiments/evaluation/: evaluation.py  inference_engine.py  perplexity.py
pretrain-experiments/frameworks/: __init__.py
pretrain_experiments/: __init__.py  __main__.py  checkpoint.py  cli.py  experiments.py  flexible_config.py  framework.py  insertion.py  insertion_map.py  logging_config.py  pretrain_experiment.py  script_utils.py  token_insertion.py
pretrain_experiments/evaluation/: __init__.py  benchmark.py  evaluation.py  inference_engine.py  olmes.py  perplexity.py
pretrain_experiments/frameworks/: __init__.py
resources/train-once-answer-all/: fictional_knowledge_queries.jsonl  forbidden_documents.jsonl
tests/: __init__.py  conftest.py  test_insertion_map.py  test_token_insertion.py
tools/olmo/: insert_dict.pkl  (+2 more)
(+44 files in other folders)
